--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <div class="nav_logo">
           <a href="#">
-            <img src="coffee_logo.png" alt="Coffee Logo" />
+            <img src="C:\Users\magdi\Desktop\create-responsive-coffee-website-html-and-css\Responsive Coffee Website HTML and CSS\images\coffee_logo.png" alt="Coffee Logo" />
             <h2>Coffee</h2>
           </a>
         </div>
