--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="services_items">
             <img
-              src="C:\Users\magdi\Desktop\create-responsive-coffee-website-html-and-css\Responsive Coffee Website HTML and CSS\images\burger_frenchFries.png"
+              src="https://github.com/MagdielIphiya/cafe-website/blob/main/burger_frenchFries.png"
               alt="Burger & French Fries"
             />
             <div class="services_text">
